--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -7,8 +7,10 @@ $default: #F3F6F8;
 $white: #ffffff;
 $gray-1: #DFDFDF;
 $black: #0A0A0A;
+$dark-blue: "#000A3A";
 $gray: #627286;
 $green: #0FB90F;
+$red: #F42D2D;
 
 body, html {
   font-family: "Inter", sans-serif;
